Fixed checkstyle issues for tests, and removed some checkstyle rules